--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <h1>hello world</h1>
     <img src="images\IMG_8385.JPG" />
     <p>loren ipsa...</p>
+    <a href="www.google.com">To google site</a>
 </html>
