add p tag to index.html

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     <img src="images\IMG_8385.JPG" />
     <p>loren ipsa...</p>
     <a href="www.google.com">To google site</a>
+    <p>change make by remote</p>
 </html>
