add another span to index.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <p>loren ipsa...</p>
     <a href="www.google.com">To google site</a>
     <p>change make by remote</p>
-
+    <span class="another-span">another span from local</span>
 </html>
