add lorem ipsum to index.html

--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
     <a href="www.google.com">To google site</a>
     <p>change make by remote</p>
     <span class="another-span">another span from local</span>
+    <p>lorem30</p>
 </html>
