change to index.html by other user

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>hello world</h1>
     <img src="images\IMG_8385.JPG" />
     <p>loren ipsa...</p>
+    <h1>from other user!!!</h1>
     <a href="www.google.com">To google site</a>
     <p>change make by remote</p>
     <span class="another-span">another span from local</span>
