final fix our problem

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>loren ipsa....  </p>
     <p>I dont no</p>
     <p>loren ipsa...</p>
-    <h1>NOW IT FROM RUTI!!!</h1>
+    <h1>NOW IT FROM RUTI!!!@@@@@</h1>
     <a href="www.google.com">To google site</a>
     <p>change make by remote</p>
     <span class="another-span">another span from local</span>
